# django-svelte-todo

./: README.md  db.sqlite3  pyproject.toml
backend/: settings.py  urls.py
backend/spa/: apps.py  views.py
backend/spa/templates/: index.html  index.js
backend/spa/templates/assets/: index-124f1695.js  index-124f1695.js.map  index-1f55a2ca.js  index-1f55a2ca.js.map  index-229bc923.js  index-229bc923.js.map  index-272cafe3.js  index-272cafe3.js.map  index-33a2f7fd.js  index-33a2f7fd.js.map  index-3a997d33.js  index-3a997d33.js.map  index-3b08bfb9.js  index-3b08bfb9.js.map  index-42c50c14.js  index-42c50c14.js.map  index-4a8f62ec.js  index-4a8f62ec.js.map  index-5e0b9d26.js  index-5e0b9d26.js.map  index-5eae93c3.js  index-5eae93c3.js.map  index-5ec78ff6.js  index-5ec78ff6.js.map  index-693a51e3.js  index-693a51e3.js.map  index-72d9ee95.js  index-72d9ee95.js.map  index-91b31379.js  index-91b31379.js.map  index-9b3142c1.js  (+27 more)
backend/static/frontend/: bundle.js  bundle.js.map  index.html
djangoSvelteSetupScript/backend/: settings.py
djangoSvelteSetupScript/backend/spa/: apps.py
djangoSvelteSetupScript/frontend/: rollup.config.js
frontend/: package-lock.json  vite.config.js
frontend/src/: App.svelte  Todo.svelte  Todolist.svelte  Todos.svelte
frontend_deprecated/: package-lock.json
frontend_deprecated/src/: App.svelte  Todo.svelte
todo/: models.py  serializers.py  views.py
todo/migrations/: 0001_initial.py  0002_rename_todo_description_todo_description_and_more.py
todo/static/css/: todo.css
todo/templates/: base.html  todolist.html  todolist_x.html
(+2 files in other folders)
